--- a/index.html
+++ b/index.html
@@ -420,9 +420,9 @@
             <div class="owl-carousel testimonial-carousel position-relative wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
-                        <p class="mb-0">Smooth and Comes Quickly. It deserves an encore for their star performance in cooling my home!</p>
+                        <p class="mb-0">UNBELIEVABLY STUPID SHIT OF A JOB. FUCKING N****RS</p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/mia-1.jpg" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/JAKOL.PNG" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
@@ -430,14 +430,13 @@
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
                     </div>
-                    <h5 class="mb-1">Mia</h5>
-                    <p class="m-0">Actress</p>
+                    <h5 class="mb-1">JAP Construction & Development Corporation</h5>
                 </div>
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
                         <p class="mb-0">DWM HVAC Inc. tuned up my air conditioning to perfection—smooth and efficient!<BR><BR></p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/jmac.jpg" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/mONO.PNG" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
@@ -445,14 +444,14 @@
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
                     </div>
-                    <h5 class="mb-1">J-Mac</h5>
-                    <p class="m-0">Mechanic</p>
+                    <h5 class="mb-1">JAP Construction & Development Corporation</h5>
+     
                 </div>
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
                         <p class="mb-0">With DWM HVAC Inc., my space is always runway-ready—cool and flawless!<BR><BR></p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/ablla.jpg" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/MDC.PNG" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
@@ -460,14 +459,13 @@
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
                     </div>
-                    <h5 class="mb-1">Abella</h5>
-                    <p class="m-0">Model</p>
+                    <h5 class="mb-1">MDC Buildplus, Inc.</h5>
                 </div>
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
                         <p class="mb-0">DWM HVAC Inc. helps me keep my cool, so my practice stays in perfect balance!<BR><BR></p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/adriana.jpg" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/DATEM.PNG" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
@@ -475,8 +473,7 @@
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
                     </div>
-                    <h5 class="mb-1">Adriana</h5>
-                    <p class="m-0">Yoga Instructor</p>
+                    <h5 class="mb-1">DATEM, Inc.</h5>
                 </div>
             </div>
         </div>
