--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
                         <p class="mb-0">UNBELIEVABLY STUPID SHIT OF A JOB. FUCKING N****RS</p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/JAKOL.PNG" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/JAKOL.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
@@ -436,7 +436,7 @@
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
                         <p class="mb-0">DWM HVAC Inc. tuned up my air conditioning to perfection—smooth and efficient!<BR><BR></p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/mONO.PNG" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/mONO.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
@@ -451,7 +451,7 @@
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
                         <p class="mb-0">With DWM HVAC Inc., my space is always runway-ready—cool and flawless!<BR><BR></p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/MDC.PNG" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/MDC.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
@@ -465,7 +465,7 @@
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
                         <p class="mb-0">DWM HVAC Inc. helps me keep my cool, so my practice stays in perfect balance!<BR><BR></p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/DATEM.PNG" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/DATEM.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
