--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
                     </div>
-                    <h5 class="mb-1">JAP Construction & Development Corporation</h5>
+                    <h5 class="mb-1">JAP Construction & Development <br>Corporation</h5>
                 </div>
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
@@ -444,7 +444,7 @@
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
                     </div>
-                    <h5 class="mb-1">JAP Construction & Development Corporation</h5>
+                    <h5 class="mb-1">JAP Construction & Development <br>Corporation</h5>
      
                 </div>
                 <div class="testimonial-item text-center">
