--- a/about.html
+++ b/about.html
@@ -175,6 +175,15 @@
                         HVAC INC expanded over the years to include
                         comprehensive HVAC solutions for both residential
                         and large commercial spaces.</p>
+                    <br>
+                    <p class="mb-4">The inverted triangle in our logo symbolizes
+our founder’s growth journey, starting from
+humble beginnings and expanding upwards.
+The three sides represent our values—trust,
+respect, and dedication—that are essential to
+our team’s foundation. The blue and violet
+colors convey the cooling comfort our
+services provide</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Residential & Commercial HVAC Solutions</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Decade-Long Expertise</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Certified Technicians</p>
@@ -191,7 +200,7 @@
                 <div class="col-lg-6 pt-4" style="min-height: 500px;">
                     <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/dog.jpg" style="object-fit: cover; padding: 0 0 50px 100px;" alt="">
-                        <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50" src="img/home-1.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50" src="img/logo.jpg" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
