--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
                         comprehensive HVAC solutions for both residential
                         and large commercial spaces.</p>
                     <br>
-                    <h6 class="bg-dark text-uppercase">Our Logo</h6>
+                     <h3 class="m-0 text-secondary">Our Loggo</h3>
                     <p class="mb-4">The inverted triangle in our logo symbolizes
 our founder’s growth journey, starting from
 humble beginnings and expanding upwards.
