--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
                         comprehensive HVAC solutions for both residential
                         and large commercial spaces.</p>
                     <br>
-                     <h3 class="m-0 text-secondary">Our Loggo</h3>
+                     <h3 class="m-0 text-secondary">Our Logo</h3>
                     <p class="mb-4">The inverted triangle in our logo symbolizes
 our founder’s growth journey, starting from
 humble beginnings and expanding upwards.
@@ -201,7 +201,7 @@ services provide</p>
                 <div class="col-lg-6 pt-4" style="min-height: 500px;">
                     <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/dog.jpg" style="object-fit: cover; padding: 0 0 50px 100px;" alt="">
-                        <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50" src="img/logo.jpg" style="object-fit: cover;" alt="">
+                        <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50" src="img/Luga.png" style="object-fit: cover;" alt="">
                     </div>
                 </div>
             </div>
