--- a/service.html
+++ b/service.html
@@ -48,7 +48,7 @@
             <div class="col-lg-3 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
                     <img src="img/logo.jpg" alt="">
-                    <h1 class="text-primary m-0">DWm HVAC Inc.</h1>
+                    <h1 class="text-primary m-0">DWM HVAC Inc.</h1>
                 </a>
             </div>
             <div class="col-lg-9 col-md-12 text-end">
