--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <div class="owl-carousel testimonial-carousel position-relative wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
-                        <p class="mb-0">UNBELIEVABLY STUPID SHIT OF A JOB. FUCKING N****RS</p>
+                        <p class="mb-0">"DWM HVAC Inc. brings unparalleled professionalism and efficiency to every project. Their commitment to excellence has made them an invaluable partner in delivering top-notch results."</p>
                     </div>
                     <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/JAKOL.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
@@ -434,7 +434,7 @@
                 </div>
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
-                        <p class="mb-0">DWM HVAC Inc. tuned up my air conditioning to perfection—smooth and efficient!<BR><BR></p>
+                        <p class="mb-0">"Working with DWM HVAC Inc. has been a pleasure. Their reliability, expertise, and innovative approach to HVAC solutions consistently enhance the quality of our construction projects."<BR><BR></p>
                     </div>
                     <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/mONO.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
@@ -444,12 +444,12 @@
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
                     </div>
-                    <h5 class="mb-1">JAP Construction & Development <br>Corporation</h5>
+                    <h5 class="mb-1">Monolith Construction & Development <br>Corporation</h5>
      
                 </div>
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
-                        <p class="mb-0">With DWM HVAC Inc., my space is always runway-ready—cool and flawless!<BR><BR></p>
+                        <p class="mb-0">"DWM HVAC Inc. has been an exceptional partner, consistently delivering top-quality HVAC solutions that meet our stringent project requirements. Their expertise and dedication make them a trusted name in the industry."<BR><BR></p>
                     </div>
                     <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/MDC.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
@@ -463,7 +463,7 @@
                 </div>
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
-                        <p class="mb-0">DWM HVAC Inc. helps me keep my cool, so my practice stays in perfect balance!<BR><BR></p>
+                        <p class="mb-0">"Our collaboration with DWM HVAC Inc. has been outstanding. Their attention to detail, technical proficiency, and ability to meet deadlines have greatly contributed to the success of our projects."<BR><BR></p>
                     </div>
                     <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/DATEM.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
