--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <div class="owl-carousel testimonial-carousel position-relative wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
-                        <p class="mb-0">"DWM HVAC Inc. brings unparalleled professionalism and efficiency to every project. Their commitment to excellence has made them an invaluable partner in delivering top-notch results."</p>
+                        <p class="mb-0">"DWM HVAC Inc. brings unparalleled professionalism and efficiency to every project. Their commitment to excellence has made them an invaluable partner in delivering top-notch results."<br></p>
                     </div>
                     <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/JAKOL.png" style="width: 80px; height: 80px;">
                     <div class="mb-2">
