--- a/service.html
+++ b/service.html
@@ -188,7 +188,7 @@
                                 repairs to quickly restore comfort and
                                 peace of mind in any HVAC emergency.<br>
                                 <br></p>
-                       <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+                       <a href="service1.html" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
                         </div>
                         <div class="bg-light p-4">
                             <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
@@ -198,7 +198,7 @@
                             <p>Reduce energy costs with our professional
                                 energy audits, optimizing the performance
                                 and efficiency of your HVAC system.</p>
-               <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+               <a href="service2.html" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
                         </div>
                         <div class="bg-light p-4">
                             <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
@@ -208,7 +208,7 @@
                             <p>Our comprehensive maintenance plans help
                                 prevent breakdowns and extend the life of
                                 your HVAC equipment.</p>
-                <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+                <a href="service4.html" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
                         </div>
                         <div class="bg-light p-4">
                             <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
@@ -220,7 +220,7 @@
                                 comfort and energy efficiency.<br>
                                 <br>
                                 </p>
-             <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+             <a href="service3.html" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
                         </div>
                     </div>
                 </div>
