--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="far fa-envelope-open text-primary me-2"></i>
-                    <p class="m-0">dmwhvacinc@gmail.com</p>
+                    <p class="m-0">dwmhvacinc@gmail.com</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <a class="btn btn-sm-square bg-white text-primary me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -242,7 +242,7 @@
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Makati Avenue, Urdaneta Village Makati City
                     </p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+6395-1075-5934</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>www.dwmhvacinc.com
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>dwmhvacinc@gmail.com
                     </p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
