--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                     <div class="testimonial-text bg-light text-center p-4 mb-4">
                         <p class="mb-0">"Working with DWM HVAC Inc. has been a pleasure. Their reliability, expertise, and innovative approach to HVAC solutions consistently enhance the quality of our construction projects."<BR><BR></p>
                     </div>
-                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/mONO.png" style="width: 80px; height: 80px;">
+                    <img class="bg-light rounded-circle p-2 mx-auto mb-2" src="img/MONOLIITTITE.jpg" style="width: 80px; height: 80px;">
                     <div class="mb-2">
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
@@ -444,7 +444,7 @@
                         <small class="fa fa-star text-secondary"></small>
                         <small class="fa fa-star text-secondary"></small>
                     </div>
-                    <h5 class="mb-1">Monolith Construction & Development <br>Corporation</h5>
+                    <h5 class="mb-1">EFB Geostrukt, Inc.</h5>
      
                 </div>
                 <div class="testimonial-item text-center">
